feat: migrate gpu analysis to server-side pagination
